fix alignment on full-width button

--- a/scss/base/_buttons.scss
+++ b/scss/base/_buttons.scss
@@ -102,5 +102,6 @@ p > .btn-give {
 
 .btn-full {
   display: block;
+  text-align: center;
   width: 100%;
 }
